v1.0.4 - Fixed all auth/no artists showing bugs; Commas in playcounts; Socials;
v1.0.4

Getting ready for a v1.1 release, this tackled the stupid bugs where no
artist was showing up, as well as the username not showing up.

	+ Artists are fetched after authing (like how they sometimes
were just getting added to localStorage but $scope.artists was never
updated.
	+ Username always shows up if it exists
	+ Commas every 3 digits in playcounts
	+ Social btns at the bottom of the page (neeet)

There will be one last pre-release before v1.1, which will be adding a
build task to the gulpfile. The 1.1 will then be made live.

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -317,6 +317,7 @@ footer {
 	text-align:		center;
 	font-size: 		12px;
 	.mt5; .mb5;
+	
 	a {
 		color:		@vrettaBlue;
 		text-decoration: underline;
@@ -326,7 +327,30 @@ footer {
 			text-decoration: none;
 		}
 	}
+
+	.socials {
+		.center; .mauto();
+		width: 100%;
+
+		.social-btn {
+			.center; 
+			display: block;
+			margin: 10px auto 0;
+			width: 100px;
+			padding: 0;
+			iframe {
+				margin-left: 10px;
+			}
+			&:last-child {
+				margin-top: -10px;
+			}
+		}
+	}
+
 }
+
+
+
 
 
 
